--- a/exterior.html
+++ b/exterior.html
@@ -26,7 +26,7 @@
         </div>
         <div class="header-buttons">
             <div class="line"></div>
-            <a class="btn" href="/home.html" onclick="route()">Home</a>
+            <a class="btn" href="/index.html" onclick="route()">Home</a>
             <a class="btn" href="/exterior.html" onclick="route()">Exterier</a>
             <a class="btn" href="/interior.html" onclick="route()">Interior</a>
             <div class="line"></div>
