Desktop optimization. Adding an adaptive
Changed/added:
- Desktop optimization
- Layout for netbook
- Tablet layout
- Layout for phone 480px and 320px
- Added comments
- fixed bugs in class names

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         </div>
     </section>
 
-    <!-- Блок с ссылкой на видео -->
+    <!--4.  Блок с ссылкой на видео -->
 
     <section class="video">
         <h3 class="video-title">Video</h3>
@@ -87,7 +87,7 @@
         <div class="line-design"></div>
     </section>
 
-    <!-- Блок с деталями -->
+    <!-- 5. Блок с деталями -->
 
     <section class="description-page">
         <div class="details-box">
