--- a/interior.html
+++ b/interior.html
@@ -36,10 +36,10 @@
 
     <!-- 2 Блок. с основным заголовком -->
 
-    <section class="container-preview-interier">
+    <section class="container-preview-interior">
         <div class="back">
-            <div class="block-preview-interier">
-                <h2 class="preview-title-interier">INTERIOR</h2>
+            <div class="block-preview-interior">
+                <h2 class="preview-title-interior">INTERIOR</h2>
             </div>
 
         </div>
