--- a/exterior.html
+++ b/exterior.html
@@ -27,7 +27,7 @@
         <div class="header-buttons">
             <div class="line"></div>
             <a class="btn" href="/index.html" onclick="route()">Home</a>
-            <a class="btn" href="/exterior.html" onclick="route()">Exterier</a>
+            <a class="btn" href="/exterior.html" onclick="route()">Exterior</a>
             <a class="btn" href="/interior.html" onclick="route()">Interior</a>
             <div class="line"></div>
         </div>
